--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/minizip"]
 	path = external/minizip
-	url = https://github.com/ytsutano/minizip
+	url = https://github.com/zlib-ng/minizip-ng
